# Connector-context-experiment

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
d2c/: config.py  envelope.py  sync.py  watcher.py
d2c/cli/: main.py
d2c/connectors/: base.py  klaviyo.py  razorpay.py  shopify.py
d2c/mcp/: citation.py  server.py
d2c/mcp/tools/: cognitive.py  reflective.py  sensory.py
d2c/projections/: common.py  klaviyo.py  razorpay.py  shopify.py
d2c/seeder/: klaviyo_events.py  razorpay_orders.py  shopify_orders.py
d2c/storage/: db.py  raw_lake.py
docs/: 01-architecture-overview.md  02-data-layer.md  03-connector-layer.md  04-agent-layer.md  founder-demo-questions.md  future-prospect.md  scale-and-failure-modes.md  why-harness-over-agents.md  why-lakehouse-over-schema.md  why-these-three-connectors.md
merchants/example/: .env.example  CLAUDE.md.example  config.yaml.example
schema/: canonical.sql
tools/: make_arch_pdf.py
